--- a/project/views/layout/base.html.twig
+++ b/project/views/layout/base.html.twig
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>{% block title %}{{ pageTitle }}{% if pageTitle|length > 0 %} | {% endif %}Удобные веб-сервисы{% endblock %}</title>
+    <title>{% block title %}{{ pageTitle }}{% if pageTitle|length > 0 %} | {% endif %}Точный клик{% endblock %}</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,7 +49,7 @@
                     {% set pages = [
                         {
                             slug : '',
-                            title : 'Удобные сервисы'
+                            title : 'Точный клик'
                         } ,{
                             slug : 'buytogether',
                             title : 'Купи вместе'
