--- a/project/views/layout/base.html.twig
+++ b/project/views/layout/base.html.twig
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/i/app2-black.png">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,300italic,400italic,500italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -34,7 +34,7 @@
 <header id="header" class="header">
     <div class="container">
         <h1 class="logo">
-            <a href="/"><img src="/i/logo.png" alt="">&nbsp;<span class="text">221-03-39</span></a>
+            <a href="/"><img src="/i/app2.png" style="height: 35px;">&nbsp;<span class="text">Точный клик</span></a>
         </h1><!--//logo-->
         <nav class="main-nav navbar-right" role="navigation">
             <div class="navbar-header">
@@ -52,7 +52,7 @@
                             title : 'Точный клик'
                         } ,{
                             slug : 'buytogether',
-                            title : 'Купи вместе'
+                            title : 'Купим вместе'
                         }
                     ] %}
                     {% for p in pages %}
