--- a/project/views/templates/startup-kit/base.html.twig
+++ b/project/views/templates/startup-kit/base.html.twig
@@ -22,7 +22,7 @@
 
     <link  href="/plugins/fancybox-3.0/dist/jquery.fancybox.min.css" rel="stylesheet">
 
-    <link  href="/css/additional.css" rel="stylesheet">
+    <link  href="/startup-kit/css/additional.css" rel="stylesheet">
 
     {% block stylesheets %}{% endblock %}
 
