--- a/project/views/templates/startup-kit/components.html.twig
+++ b/project/views/templates/startup-kit/components.html.twig
@@ -2,7 +2,7 @@
 
 {% macro overviewSection(sectionData, slug, path, editMode) %}
 
-    {% import "/components/data.html.twig" as data %}
+    {% import "/data.html.twig" as data %}
 
     <section id="overview-section" class="overview-section section">
         <h2 class="section-title">
@@ -68,7 +68,7 @@
 
 {% macro featureBlocksSection(sectionData, slug, path, editMode) %}
 
-    {% import "/components/data.html.twig" as data %}
+    {% import "/data.html.twig" as data %}
 
     <div class="feature-blocks container">
 
