--- a/project/views/templates/startup-kit/top.html.twig
+++ b/project/views/templates/startup-kit/top.html.twig
@@ -158,7 +158,7 @@
 
 {% macro simple(sectionData, slug, path, editMode) %}
 
-    {% import "/components/data.html.twig" as data %}
+    {% import "/data.html.twig" as data %}
 
     <section class="career-page heading-section section section-on-bg">
         <div class="hero-wrapper">
