--- a/project/views/templates/startup-kit/nav.html.twig
+++ b/project/views/templates/startup-kit/nav.html.twig
@@ -14,7 +14,7 @@
 
 {% macro pageNavSection(sectionData, slug, path, editMode) %}
 
-    {% import "/components/data.html.twig" as data %}
+    {% import "/data.html.twig" as data %}
 
     <div class="page-nav-space-holder hidden-xs">
         <div id="page-nav-wrapper" class="page-nav-wrapper text-center">
