Перетащил page в templates

--- a/project/views/templates/startup-kit/base.html.twig
+++ b/project/views/templates/startup-kit/base.html.twig
@@ -80,6 +80,8 @@
     </div><!--//container-->
 </footer><!--//footer-->
 
+{% block settings %}{% endblock %}
+
 <script src="/common/jquery/jquery-1.12.4.min.js"></script>
 <script src="/common/bootstrap/js/bootstrap.min.js"></script>
 <script src="/startup-kit/plugins/bootstrap-hover-dropdown.min.js"></script>
