Разграничил head и body страницы по файлам

--- a/project/views/templates/startup-kit/base.html.twig
+++ b/project/views/templates/startup-kit/base.html.twig
@@ -80,7 +80,7 @@
     </div><!--//container-->
 </footer><!--//footer-->
 
-{% block settings %}{% endblock %}
+{% block pageSettings %}{% endblock %}
 
 <script src="/common/jquery/jquery-1.12.4.min.js"></script>
 <script src="/common/bootstrap/js/bootstrap.min.js"></script>
