--- a/project/views/templates/startup-kit/structure/base.html.twig
+++ b/project/views/templates/startup-kit/structure/base.html.twig
@@ -72,10 +72,10 @@
         <div class="divider"></div>
         <div class="footer-bottom text-center">
             <ul class="social-media list-inline">
-                <li><a href="http://vk.com"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                <li><a href="http://vk.com/shurupov" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
             </ul>
 
-            <small class="copyright">Разработано <a href="http://vk.com/shurupov" target="_blank">Евгением</a></small>
+            <small class="copyright"><a href="/">Точный клик</a></small>
         </div>
     </div><!--//container-->
 </footer><!--//footer-->
