--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -19,6 +19,10 @@
         <script src="/templates/startup-kit/js/demo/style-switcher.js"></script>
     {% endif %}
 
+    <!-- Vimeo video API -->
+    <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script type="text/javascript" src="assets/js/vimeo.js"></script>
+
 {% endblock %}
 
 {% block pageSettings %}
