--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -8,6 +8,7 @@
         <link href="/plugins/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
         <link href="/plugins/bootstrap3-editable/css/link-editable.css" rel="stylesheet">
         <link href="/plugins/bootstrap3-editable/css/image-editable.css" rel="stylesheet">
+        <link href="/plugins/bootstrap3-editable/css/settings-editable.css" rel="stylesheet">
     {% endif %}
 {% endblock %}
 
@@ -21,7 +22,7 @@
 
     <!-- Vimeo video API -->
     <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
-    <script type="text/javascript" src="assets/js/vimeo.js"></script>
+    <script type="text/javascript" src="/templates/startup-kit/js/vimeo.js"></script>
 
 {% endblock %}
 
